# Traffic_Lane_Detection

./: .travis.yml  CMakeLists.txt  LICENSE  UML.xml  readme.md
Doxygen/: Doxygen_config  laneDetection
Doxygen/html/: LaneDetectionModuleTest_8cpp.html  LaneDetectionModuleTest_8cpp__incl.map  LaneDetectionModuleTest_8cpp__incl.md5  LaneDetectionModule_8hpp_source.html  LaneMock_8cpp.html  LaneMock_8cpp__incl.map  LaneMock_8cpp__incl.md5  LaneTest_8cpp.html  LaneTest_8cpp__incl.map  LaneTest_8cpp__incl.md5  Lane_8hpp.html  Lane_8hpp__dep__incl.map  Lane_8hpp__dep__incl.md5  Lane_8hpp__incl.map  Lane_8hpp__incl.md5  Lane_8hpp_source.html  annotated.html  classLane-members.html  classLane.html  classLaneDetectionModule-members.html  classLaneDetectionModule.html  classLaneDetectionModuleTest-members.html  classLaneDetectionModuleTest.html  classLaneDetectionModuleTest__coll__graph.map  classLaneDetectionModuleTest__coll__graph.md5  classLaneDetectionModuleTest__inherit__graph.map  classLaneDetectionModuleTest__inherit__graph.md5  classLaneMock-members.html  classLaneMock.html  classLaneMock__coll__graph.md5  classLaneMock__inherit__graph.map  classLane__inherit__graph.map  classLane__inherit__graph.md5  classes.html  dir_000001_000000.html  (+18 more)
app/: CMakeLists.txt  Lane.cpp  LaneDetectionModule.cpp  SteerDrive.cpp  main.cpp
include/: Lane.h  Lane.hpp  LaneDetectionModule.h  LaneDetectionModule.hpp  SteerDrive.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  GmockSteer.cpp  LaneDetectionModuleTest.cpp  LaneMock.cpp  LaneTest.cpp  main.cpp  test.cpp
(+32 files in other folders)
